--- a/src/app/views/dashboards/index/index.component.html
+++ b/src/app/views/dashboards/index/index.component.html
@@ -1,30 +1,33 @@
 <div class="content__wrapper">
   <div class="content__section-wrapper">
     <div class="content__feature mb-40">
-      <div class="content__feature__card">
-        <div class="dashboard">
-          <div class="dashboardBody">
-            <h4 class="mb-0">Todo App</h4>
-            <br />
-            <h5 class="mb-0">developed in Angular - Spring Boot</h5>
-            <br />
-            <img
-              src="../../../../assets/img/angular-spring.png"
-              width="140"
-              alt=""
-            />
+      <div class="content__feature__card dashboard__bg">
+        <div class="content__feature__card dashboard__overlay">
+          <div class="dashboard">
+            <div class="dashboard__body">
+              <p class="mb-0 dashboard__title1">Todo App</p>
+              <br />
+              <p class="mb-0 dashboard__title2">developed in Angular - Spring Boot</p>
+              <br />
+              <img
+                src="../../../../assets/img/angular-spring.png"
+                width="140"
+                alt=""
+              />
+            </div>
+            <div class="dashboard__footer">www.davidebalice.dev</div>
           </div>
-
-          <p class="dashboardFooter">www.davidebalice.dev</p>
         </div>
       </div>
       <div class="content__feature__card">
         <div class="demo__container">
           <span class="todo_text1">DEMO MODE</span>
+          <br />
+          <br />
           <span class="todo_text2"
             >Demo mode is active, crud operations
             <br />
-            (write, update, delete) are not allowed</span
+            are not allowed (write, update, delete).</span
           >
         </div>
       </div>
