--- a/src/app/todos/todos.component.scss
+++ b/src/app/todos/todos.component.scss
@@ -40,12 +40,11 @@
   gap: 4px;
   align-items: center;
   border: 1px solid #ddd;
-  border-radius: 4px;
+  border-radius: 6px;
   padding: 8px;
+  color: #fff;
   padding-right: 4px;
-  background-color: #f1f1f1;
-  box-shadow: 0px 2px 3px 0px rgb(0, 0, 0, 0.2);
-  border: 3px solid;
+  background-color: var(--primary-color);
 }
 
 .viewContainer div {
@@ -53,13 +52,28 @@
   padding: 10px 20px;
 }
 
+.buttonBase {
+  padding: 0px 20px;
+  cursor: pointer;
+  border-radius: 6px;
+}
+
+.buttonBase:hover {
+  background-color: #aaa;
+}
+
 .buttonView {
-  height: 38px !important;
+  height: 34px !important;
   align-items: center;
   display: flex;
   justify-content: center;
+  background: #1e7ac1;
+}
+
+.buttonView:hover {
+  background: #206eaa;
 }
 
 .notSelected {
-  background-color: #999;
+  background-color: #aaa;
 }
